src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CustomerRef__c</fullName>
        <label>CustomerRef</label>
        <picklist>
            <picklistValues>
                <fullName>CustomerRef1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerRef2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerRef3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerRef4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerRef5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Icon_Image__c</fullName>
        <formula>IMAGE(Icon__c, &quot;Icon&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Icon Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Order__c</fullName>
        <inlineHelpText>set this field to the same value for all products with the same Icon</inlineHelpText>
        <label>Icon Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <inlineHelpText>URL to Product group Icon</inlineHelpText>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Inside_Icon__c</fullName>
        <inlineHelpText>Use this field to arrange products inside selected Icon on Quick Pitch &quot;Product Add&quot; screen</inlineHelpText>
        <label>Order Inside Icon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Group__c</fullName>
        <label>Revenue Group</label>
        <picklist>
            <picklistValues>
                <fullName>ROP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wraps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Revenue__c</fullName>
        <label>Schedule Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAIncludeInIncomeSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated: Include in Income Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products (Purchase Tax Code)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPurchaseAnalysisAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Analysis Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products (Purchase Analysis Account)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesRevenueAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The general ledger account to which sales revenues for this product be posted.</description>
        <label>Sales Revenue Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxRule__c</fullName>
        <label>External Sales Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt for Qualifying Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ffps_dmgi__Agresso_Title__c</fullName>
        <label>Agresso Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>CustomerRef__c</columns>
        <columns>Revenue_Group__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Pitch Ideas</label>
    </listViews>
</CustomObject>